add some sections projectmanagement is written

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -20,6 +20,7 @@
 \newacronym{ac:MEMS}{MEMS}{Microelectromechanical Systems}
 \newacronym{ac:EHSM}{EHSM}{Eidgenössische Hochschule für Sport Magglingen}
 \newacronym{ac:daq}{DAQ}{Data Acquisition}
+\newacronym{ac:ap}{AP}{Arbeitspakete}
 
 
 
