--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -15,7 +15,9 @@
 \chapter{Grundlagen}\label{ch:grundlagen}
 \section{Anatomie des Knies}
 \section{LabVIEW auf NI myRIO}
+	\todo{Basisprojekt erklären: gross10}
 \section{\acrshort{ac:daq} in MATLAB}
 \section{Rotationsmatrix}
 \section{nummerische Integration}
-\subsection{Trapeszmethode}
+\subsection{Trapezmethode}
+\subsection{Filter}
