--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -20,10 +20,12 @@
 \subsection{Rotation}
 \subsection{Integration}
 \section{Software}
-\section{Testaufbau}
+\section{Experimental-Protokoll }
 \subsection{Mechanik}
 \subsection{Messhardware}
+\subsection{Software}
 \subsection{Messfehler}
-\section{Messprotokoll}
+\subsection{Ablauf}
+\todo{verschiedene Messung beschieben für Reprodutzierbarkeit}
 \section{Validierung}
-\subsection{Messreihe}
+\todo{Auswertung Experimental-Protokoll}
