--- a/content/4_implementierung/implementierung.tex
+++ b/content/4_implementierung/implementierung.tex
@@ -13,4 +13,7 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Implementierung}\label{ch:implementierung}
-\section{}
+\section{Portierung MATLAB}
+\section{Demonstrator}
+\section{Experimental-Protokoll }
+\section{Validierung}
