small extension for the proccess-diagram

--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -43,7 +43,7 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 blabla\par
 %
 \subsection{Ablauf und Gliederung des Projekts}
-	Das Projekt wird in insgesamt vier Phasen gegliedert. Jede Phase beinhaltet dabei mehrere \gls{ac:ap}, die durch die beiden Autoren abgearbeitet werden. Dabei werden Arbeiten gemeinsam und getrennt durchgeführt. Dieses Vorgehen steigert die Effizienz und garantiert gleichzeitig eine gewisse Redundanz im Arbeitsprozess. Der detaillierte Ablauf ist der Abbildung \vref{img:projekablauf} zu entnehmen.
+	Das Projekt wird in insgesamt vier Phasen gegliedert. Jede Phase beinhaltet dabei mehrere \gls{ac:ap}, die durch die beiden Autoren abgearbeitet werden. Dabei werden Arbeiten gemeinsam und getrennt durchgeführt. Dieses Vorgehen steigert die Effizienz und garantiert gleichzeitig eine gewisse Redundanz im Arbeitsprozess. Der detaillierte Ablauf ist der Abbildung \vref{img:projekablauf} zu entnehmen. Dabei sind die linken \gls{ac:ap} Simon Grossenbacher und die rechten Reto Zurschmieden zuzuordnen.
 	\image{content/1_einleitung/image/ablauf}{scale=1}{htbp}[Projekablauf][img:projekablauf]
 \subsubsection{Arbeitsphasen}\label{sss:arbeitsphasen}
 	Die bereits erwähnten Phasen umfassen die Punkte Literaturstudie, Konzept, Implementierung und Validierung
@@ -67,14 +67,18 @@ blabla\par
 	\image{content/1_einleitung/image/Zeitplan}{scale=1}{htbp}[Zeitplan][img:zeitplan]
 %
 %
-\subsubsection{Meilensteine}\todo{noch Beschreiben und anpassen}
+\subsubsection{Meilensteine}
 	Jede Phase\footnote{siehe Abschnitt \vref{sss:arbeitsphasen}} wird durch einen Meilenstein abgeschlossen. Die Erfüllung einen Meilensteins ist Voraussetzung für das Voranschreiten in die nächste Projektphase.
 	\begin{description}
-		\item[wichtigste Methode evaluiert]
-		\item[Machbarkeit gewährleistet]
-		\item[Abschluss Implementation]
-		\item[Zusammenfassung]
-		\item[Abgabe Thesis]
+		\item[wichtigste Methode evaluiert] Die Literaturstudie hat zum Ziel einen funktionierenden Ansatz für die spätere Konzeptentwicklung zu evaluieren. Dies muss am \textbf{04.06.2014} abgeschlossen werden.
+		%
+		\item[Machbarkeit gewährleistet] Am Ende der Konzeptphase muss ein Algorithmus vorliegen, der die Machbarkeit des Projekts gewährleistet. Abgeschlossen ist die am \textbf{11.06.2014}.
+		%
+		\item[Abschluss Implementation] Die Abschlussbedingung der Implementationsphase ist fertige Umsetzung des Konzept in LabView. Dies soll bis am \textbf{19.06.2014} erfolgen.
+		%
+		\item[Zusammenfassung] Abschliessend wir das gesamte Projekt einer Validierung unterzogen. Diese Phase ist am \textbf{26.06.2014} abgeschlossen.
+		%
+		\item[Abgabe Thesis] Das Abgabedatum der Thesis ist auf den \textbf{30.06.2014} datiert.
 	\end{description}
 %
 %
