add daq with matlab

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -21,6 +21,8 @@
 \newacronym{ac:EHSM}{EHSM}{Eidgenössische Hochschule für Sport Magglingen}
 \newacronym{ac:daq}{DAQ}{Data Acquisition}
 \newacronym{ac:ap}{AP}{Arbeitspakete}
+\newacronym{ac:icp}{ICP}{integrated circuit piezoelectric}
+\newacronym{ac:ni}{NI}{National Instruments}
 
 
 
