--- a/bibliography.bib
+++ b/bibliography.bib
@@ -88,3 +88,13 @@
   month = {9},
   keywords = {lit},
 }
+
+@BOOK{lit:linalg2,
+  title = {Lineare Algebra und Geometrie 2},
+  publisher = {Berner Fachhochschule Fachbereich MNG},
+  year = {2011},
+  author = {Dr. Werner Jenni},
+  edition = {},
+  month = {},
+  keywords = {lit},
+}
