--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -17,7 +17,10 @@
 \section{LabVIEW auf NI myRIO}
 	\todo{Basisprojekt erklären: gross10}
 \section{\acrshort{ac:daq} in MATLAB}
+MATLAB bietet zum direkten Auslesen von Daten eine Data Acquisition Toolbox an. In dieser können angeschlossene \acrshort{ac:daq}-Karten in einer sogenannten Session direkt in MATLAB Beispielsweise mittels USB ausgelesen werden. Auch können Daten/Signale, welche in MATLAB generiert wurden über Ausgänge der Karte ausgegeben werden.
+Zum Auslesen eines Beschleunigungssensors wurde ein kurzes MATLAB-Skript geschrieben (ersichtlich in \vref{ch:daqauslesen}). Dieses Skript sollte auch zukünftigen Arbeiten eine schnelle und einfache Verwendung der Beschleunigungssensoren ermöglichen.
 \section{Rotationsmatrix}
+In der Linearen Algebra bietet eine Rotationsmatrix die Möglichkeit, einen Punkt im Raum um einen bestimmten Winkel zu drehen. In unserem Fall ist eine Rotation eines Punktes um eine Gerade g im Raum nötig. Die Gerade hat die Richtung $\overrightarrow{n}=$ und verläuft durch den Ursprung. Ihre Parameterdarstellung ist somit: $\overrightarrow{r}= \lambda*\overrightarrow{n}$  \cite{lit:linalg2}
 \section{nummerische Integration}
 \subsection{Trapezmethode}
 \subsection{Filter}
