--- a/report.tex
+++ b/report.tex
@@ -327,6 +327,11 @@
 %Anhang B
 %\input{appendix/technischer_bericht/technischer_bericht}
 %
+%Anhang B
+\input{appendix/MATLAB/MATLAB}
+%
+%Anhang B
+%\input{appendix/datasheet/datasheet}
 %
 %
 \end{document}
