add the first part of the section LabVIEW mit NI myRIO add some extensions add some glossaries and acronyms

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -23,6 +23,8 @@
 \newacronym{ac:ap}{AP}{Arbeitspakete}
 \newacronym{ac:icp}{ICP}{integrated circuit piezoelectric}
 \newacronym{ac:ni}{NI}{National Instruments}
+\newacronym{ac:vi}{VI}{virtuelles Instrument}
+
 
 
 
