--- a/bibliography.bib
+++ b/bibliography.bib
@@ -43,7 +43,7 @@
   title = {Gait posture estimation using wearable acceleration and gyro sensors},
   publisher = {Hokkaido University},
   year = {2009},
-  author = {Ryo Takeda, Shigeru Tadano, Akiko Natorigawa, Masahiro Todoh, Satoshi Yoshinari},
+  author = {Ryo Takeda and Shigeru Tadano and Akiko Natorigawa and Masahiro Todoh and Satoshi Yoshinari},
   edition = {},
   month = {11},
   keywords = {lit},
@@ -53,7 +53,7 @@
   title = {Method to Estimate the Position and Orientation of a Triaxial Accelerometer Mounted to an Industial Manipulator},
   publisher = {Department of Electrical Engineering, Link"oping University},
   year = {2011},
-  author = {Patrik Axelsson, Mikael Norrl"of},
+  author = {Patrik Axelsson and Mikael Norrl"of},
   edition = {},
   month = {9},
   keywords = {lit},
@@ -63,7 +63,7 @@
   title = {Tool Position Estimation of a Flexible Industrial Robot using Recursive Bayesian Methods},
   publisher = {IEEE International Conference on Robotics and Automation},
   year = {2012},
-  author = {Patrik Axelsson, Rickard Karlsson, Mikael Norrl"of},
+  author = {Patrik Axelsson and Rickard Karlsson and Mikael Norrl"of},
   edition = {},
   month = {5},
   keywords = {lit},
@@ -73,7 +73,7 @@
   title = {3-D Position Estimation from Inertial Sensing: Minimizing the Error from the Process of Double Integration of Accelerations},
   publisher = {Department of Mechanical Engineering, University of Coimbra},
   year = {2009},
-  author = {Pedro Neto, J. Noberto Pires},
+  author = {Pedro Neto and J. Noberto Pires},
   edition = {},
   month = {},
   keywords = {lit},
@@ -96,5 +96,43 @@
   author = {Dr. Werner Jenni},
   edition = {},
   month = {},
+  keywords = {lit},
+}
+
+@BOOK{lit:labview,
+  title = {Einf"uhrung in LabVIEW},
+  publisher = {Fachbuchverlag Leipzig},
+  year = {2012},
+  author = {Wolfgang Georgi},
+  edition = {5},
+  month = {},
+  ISBN = {978-3-446-42386-2},
+  keywords = {lit},
+}
+
+@ONLINE{lit:myrio,
+  url = {http://www.ni.com/myrio/d/},
+  title = {NI myRIO},
+  publisher = {National Instruments},
+  urldate = {2014-06-04},
+  year = {2014},
+  keywords = {lit},
+}
+
+@MISC{img:myrio,
+  url = {http://www.ni.com/myrio/d/},
+  urldate = {2014-06-04},
+  author = {National Instruments},
+  title = {NI myRIO},
+  year = {2014},
+  keywords = {pic},
+}
+
+@ONLINE{lit:rt_linux,
+  url = {http://www.ni.com/white-paper/14626/de/},
+  title = {NI Linux Real Time},
+  publisher = {National Instruments},
+  urldate = {2014-06-04},
+  year = {2014},
   keywords = {lit},
 }
