--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -42,9 +42,11 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 \section{Aufgabenstellung}\label{s:aufgabenstellung}
 blabla\par
 %
-\subsection{Ablauf und Gliederung des Projekts}
+\subsection{Ablauf und Gliederung des Projekts}\label{ss:ablauf_gliederung_projekt}
 	Das Projekt wird in insgesamt vier Phasen gegliedert. Jede Phase beinhaltet dabei mehrere \gls{ac:ap}, die durch die beiden Autoren abgearbeitet werden. Dabei werden Arbeiten gemeinsam und getrennt durchgeführt. Dieses Vorgehen steigert die Effizienz und garantiert gleichzeitig eine gewisse Redundanz im Arbeitsprozess. Der detaillierte Ablauf ist der Abbildung \vref{img:projekablauf} zu entnehmen. Dabei sind die linken \gls{ac:ap} Simon Grossenbacher und die rechten Reto Zurschmieden zuzuordnen.
+	%
 	\image{content/1_einleitung/image/ablauf}{scale=1}{htbp}[Projekablauf][img:projekablauf]
+%	
 \subsubsection{Arbeitsphasen}\label{sss:arbeitsphasen}
 	Die bereits erwähnten Phasen umfassen die Punkte Literaturstudie, Konzept, Implementierung und Validierung
 	%
