--- a/report.tex
+++ b/report.tex
@@ -322,15 +322,9 @@
 \input{appendix/versionierung/versionierung}
 %
 %Anhang B
-%\input{appendix/tutorial/tutorial}
-%
-%Anhang B
-%\input{appendix/technischer_bericht/technischer_bericht}
-%
-%Anhang B
 \input{appendix/MATLAB/MATLAB}
 %
-%Anhang B
+%Anhang C
 %\input{appendix/datasheet/datasheet}
 %
 %
