--- a/glossary.tex
+++ b/glossary.tex
@@ -21,3 +21,5 @@
 \newglossaryentry{g:triangulation}{name=Triangulation, description= {Positionsbestimmung im Raum mittels Richtungs- und Abstandsmessung. Berechnung der Position erfolgt anschliessend mit geometrischen Funktionen.}}
 \newglossaryentry{g:magnetometer}{name=Magnetometer, description={Sensor zum Messen von magnetischen Flussdichten}}
 \newglossaryentry{g:transversalebene}{name=Transversalebene, description={Ebene in der Medizin. Erstreckt sich von links nach rechts und von vorne nach hinten. Sie steht senkrecht auf der Längsachse des Mesnchlichen Körpers. \cite{lit:transversal}}}
+\newglossaryentry{g:labview}{name=LabVIEW, description={System Design Software von der Firma \acrfull{ac:ni}}}
+\newglossaryentry{g:myrio}{name=NI myRIO, description={Developmentboard der Firma \acrfull{ac:ni} entwickelt für den günstigen Einstieg in \gls{g:labview}}}
